Add css, refactor

--- a/src/main/resources/static/html/addCustomerPage.html
+++ b/src/main/resources/static/html/addCustomerPage.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Customer List Fragment</title>
-    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Add Customer</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <script src="/js/customerForm.js" defer></script>
 </head>
 <body>
@@ -28,7 +31,7 @@
         <button type="submit" class="btn btn-primary">Save Customer</button>
     </form>
 
-    <div id="customerTable" style="margin-top: 10px;">
+    <div id="customerTable" style="margin-top: 30px;">
         <table class="table table-bordered">
             <thead>
             <tr>
