Refactor number field buttons

--- a/src/main/resources/static/html/addCustomerPage.html
+++ b/src/main/resources/static/html/addCustomerPage.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Customer</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/styles.css"> <!-- Link to external CSS file -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="/css/styles.css"> <!-- Link to external CSS file -->
     <script src="/js/customerFormValidation.js" defer></script> <!-- Link to validation script -->
     <script src="/js/customerForm.js" defer></script> <!-- Link to main customer form script -->
 </head>
@@ -24,17 +24,29 @@
         <div class="form-group">
             <label for="age">Age:</label>
             <div id="ageError" class="alert alert-danger d-none" role="alert"></div>
-            <input type="number" id="age" name="age" class="form-control" />
+            <div class="number-input-container">
+                <button type="button" class="custom-btn decrement-btn" onclick="decrement('age')">-</button>
+                <input type="number" id="age" name="age" class="form-control" />
+                <button type="button" class="custom-btn increment-btn" onclick="increment('age')">+</button>
+            </div>
         </div>
         <div class="form-group">
             <label for="monthlyIncome">Monthly Income:</label>
             <div id="monthlyIncomeError" class="alert alert-danger d-none" role="alert"></div>
-            <input type="number" id="monthlyIncome" name="monthlyIncome" class="form-control" />
+            <div class="number-input-container">
+                <button type="button" class="custom-btn decrement-btn" onclick="decrement('monthlyIncome')">-</button>
+                <input type="number" id="monthlyIncome" name="monthlyIncome" class="form-control" />
+                <button type="button" class="custom-btn increment-btn" onclick="increment('monthlyIncome')">+</button>
+            </div>
         </div>
         <div class="form-group">
             <label for="dependents">Dependents:</label>
             <div id="dependentsError" class="alert alert-danger d-none" role="alert"></div>
-            <input type="number" id="dependents" name="dependents" class="form-control" />
+            <div class="number-input-container">
+                <button type="button" class="custom-btn decrement-btn" onclick="decrement('dependents')">-</button>
+                <input type="number" id="dependents" name="dependents" class="form-control" />
+                <button type="button" class="custom-btn increment-btn" onclick="increment('dependents')">+</button>
+            </div>
         </div>
         <button type="submit" class="btn btn-primary">Save Customer</button>
     </form>
@@ -61,6 +73,5 @@
         </table>
     </div>
 </div>
-
 </body>
 </html>
