Refactor packages, endpoint name

--- a/src/main/resources/static/html/customer/addCustomerPage.html
+++ b/src/main/resources/static/html/customer/addCustomerPage.html
@@ -9,8 +9,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/css/styles.css"> <!-- Link to external CSS file -->
-    <script src="/js/customerFormValidation.js" defer></script> <!-- Link to validation script -->
-    <script src="/js/customerForm.js" defer></script> <!-- Link to main customer form script -->
+    <script src="/js/customer/customerFormValidation.js" defer></script> <!-- Link to validation script -->
+    <script src="/js/customer/customerForm.js" defer></script> <!-- Link to main customer form script -->
 </head>
 <body>
 <div class="container">
